# manipulator

./: .hgignore  .setup_assistant  CMakeLists.txt  Makefile  inv_kine_test  mainpage.dox  manifest.xml  package.xml  torque
action/: actionList.txt  bye.txt  cornflake_pullback.txt  crack.txt  dropbar.txt  dropkitchen.txt  dropsidetable.txt  dropstove.txt  grip_close.txt  grip_open.txt  hitler.txt  joint_normal.txt  nod.txt  normal.txt  normal_for_drop.txt  normal_for_get.txt  normal_pullback.txt  opencliftup.txt  opencwalking.txt  place_object.txt  prepare.txt  prepare_pullback.txt  pullback.txt  pullback2.txt  revertTestt.txt  rips_out.txt  setNeck.txt  showpower.txt  straight.txt  test.txt  testt.txt  tune.txt  walking.txt  walking_for_drop.txt
action/unused/: action_one.txt  drop.txt  fan_wave.txt  pan_tilt.txt  rips_0.txt  rips_1.txt  rips_in.txt  shop_0.txt  shop_1.txt  shop_2.txt  show_lift.txt
config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  lumyai_neli.srdf  ompl_planning.yaml  sensors_rgbd.yaml
launch/: default_warehouse_db.launch  demo.launch  lumyai_neli_moveit_controller_manager.launch.xml  lumyai_neli_moveit_sensor_manager.launch.xml  move_group.launch  moveit.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  test_manipulator.launch  trajectory_execution.launch.xml  warehouse.launch
nodes/: .manipulator.py.swp  backup_manipulator.py  inverseKinematic.py  manipulator.py  manipulator_node.py  manipulator_old.py  manipulator_open.py  pick.py  pick_place_tutorial.cpp  place.py  test_service.py  tjs.py
nodes/set_arm/: fuck.sh  left_dance_1.sh  left_dance_2.sh  left_normal.sh  left_respect.sh  left_sweep.sh  left_tray.sh  neck_manipulator.sh  neck_normal.sh  open.sh  pick.sh  right_dance_1.sh  right_dance_2.sh  right_normal.sh  right_respect.sh  right_sweep.sh  right_tray.sh  right_wave.sh  set_right_wrist.py
srv/: ManipulateAction.srv  isManipulable.srv
