<?xml version="1.0"?>
<package>
  <name>manipulator</name>
  <version>0.0.0</version>
  <description>The manipulator package</description>
  <maintainer email="nicole@todo.todo">nicole</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>dynamixel_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>dynamixel_msgs</run_depend>
  <run_depend>tf</run_depend>
  <export>
  </export>
</package>